# FastAPI_Project

./: README.md  dependencies.txt  main.py  pyproject.toml  running_main.py_.txt
