[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.5",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.3",
]
